--- a/css/about.css
+++ b/css/about.css
@@ -221,14 +221,19 @@ body{
   border: 5px solid #fff;
   border-radius: 50%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s, box-shadow 0.3s;
+  transition: transform 0.5s, box-shadow 0.9s;
   cursor: pointer;
   margin-top: -40px;
+  animation: moveUpDown 3s ease-in-out infinite, changeColor 6s infinite;
 }
 
-#founder-message img:hover {
-  transform: translateY(-5px); 
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+@keyframes moveUpDown {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
 }
 
 
@@ -334,9 +339,4 @@ body{
   font-family: sans-serif;
   font-weight: 600;
   font-size: 1.5rem;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif; /* You can change the font family as needed */
 }
