--- a/css/home.css
+++ b/css/home.css
@@ -148,7 +148,7 @@ body{
     display: inline-block;
     padding: 10px 20px; 
     color: white; 
-    background-color: #4B3D29; 
+    background-color: #b22222; 
     border: none; 
     border-radius: 5px; 
     text-decoration: none; 
@@ -163,7 +163,7 @@ body{
     left: -100%; 
     width: 100%; 
     height: 100%; 
-    background-color: #B22222; 
+    background-color: #4B3D29; 
     transition: left 0.3s; 
     z-index: 0; 
 }
@@ -220,7 +220,7 @@ body{
 }
 
 .about-btn:hover{
-    background-color: #b22222 !important;
+    background-color: #4B3D29 !important;
 }
 
 
@@ -266,7 +266,7 @@ body{
 
 .about-btn {
     padding: 10px 20px; 
-    background-color: #4B3D29; 
+    background-color: #b22222; 
     color: white; 
     border: none; 
     border-radius: 5px;
