--- a/css/contact.css
+++ b/css/contact.css
@@ -175,6 +175,62 @@ body{
     border-radius: 10px;
 }
 
+.form-group form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px; 
+}
+
+.form-group input,
+.form-group textarea {
+  padding: 12px; 
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px; 
+  width: 100%;
+  font-size: 1rem; 
+  background-color: #fff; 
+  transition: border-color 0.3s ease, box-shadow 0.3s ease; 
+}
+
+
+
+.form-group input:focus,
+.form-group textarea:focus {
+  border-color: #b22222; 
+  box-shadow: 0 0 8px rgba(167, 5, 59, 0.3); 
+  outline: none; 
+}
+
+.form-group textarea {
+  min-height: 150px; 
+  resize: vertical; 
+}
+
+.submit {
+  padding: 12px;
+  background-color: #b22222; 
+  color: white;
+  border: none;
+  border-radius: 8px; 
+  cursor: pointer;
+  font-size: 1rem; 
+  width: 30%;
+  transition: background-color 0.3s ease, transform 0.2s ease; 
+}
+
+ .submit:hover {
+  background-color: #4B3D29; 
+  transform: translateY(-2px); 
+}
+
+.submit:active {
+  background-color: #4B3D29; 
+  transform: translateY(0); 
+}
+
+
+
 
 
 
