--- a/css/home.css
+++ b/css/home.css
@@ -143,7 +143,7 @@ body{
 } */
 
 
-.hero .btn-primary {
+.hero .book {
     position: relative; 
     display: inline-block;
     padding: 10px 20px; 
@@ -156,7 +156,7 @@ body{
     transition: color 0.3s;
 }
 
-.hero .btn-primary::before {
+.hero .book::before {
     content: ""; 
     position: absolute; 
     top: 0; 
@@ -168,26 +168,26 @@ body{
     z-index: 0; 
 }
 
-.hero .btn-primary:hover {
+.hero .book:hover {
     color: white; 
 }
 
-.hero .btn-primary:hover::before {
+.hero .book:hover::before {
     left: 0; 
 }
 
-.hero .btn-primary span {
+.hero .book span {
     position: relative;
     z-index: 1; 
 }
 
-
+/* 
 .about .position-relative {
-    position: relative; /* Positioning context for the overlay */
+    position: relative;
 }
 
 .about .overlay {
-    position: absolute; /* Position the overlay */
+    position: absolute; 
     top: 0;
     left: 0;
     right: 0;
@@ -195,7 +195,7 @@ body{
     background-color: rgba(165, 42, 42, 0.5);   
     border-radius: 10px; 
     z-index: 1; 
-}
+} */
 
 .about img {
     border-radius: 10px; 
@@ -353,6 +353,16 @@ body{
 
   }
 
+  .date-text {
+    font-size: 0.9rem; 
+    color: #777;
+    margin-left: 5px; 
+}
+
+.icon{
+    color: #B22222;
+}
+
   .contacth2{
     color: #B22222;
     margin-right: 10px;
@@ -389,8 +399,8 @@ body{
 
 .form-group input textarea{
     width: 100%;
-    outline: none;
-    padding: 15px;
+    outline:none;
+    padding: 15px ;
     margin: 15px 0;
     color: #fff;
     font-size: 18px;
@@ -398,6 +408,59 @@ body{
     border-radius: 10px;
 }
 
+.form-group form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px; 
+}
+
+.form-group input,
+.form-group textarea {
+  padding: 12px; 
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px; 
+  width: 100%;
+  font-size: 1rem; 
+  background-color: #fff; 
+  transition: border-color 0.3s ease, box-shadow 0.3s ease; 
+}
+
+
+
+.form-group input:focus,
+.form-group textarea:focus {
+  border-color: #b22222; 
+  box-shadow: 0 0 8px rgba(167, 5, 59, 0.3); 
+  outline: none; 
+}
+
+.form-group textarea {
+  min-height: 150px; 
+  resize: vertical; 
+}
+
+.submit {
+  padding: 12px;
+  background-color: #b22222; 
+  color: white;
+  border: none;
+  border-radius: 8px; 
+  cursor: pointer;
+  font-size: 1rem; 
+  width: 30%;
+  transition: background-color 0.3s ease, transform 0.2s ease; 
+}
+
+ .submit:hover {
+  background-color: #4B3D29; 
+  transform: translateY(-2px); 
+}
+
+.submit:active {
+  background-color: #4B3D29; 
+  transform: translateY(0); 
+}
 
 .footer {
     background-color: #4B3D29; 
