--- a/css/blog.css
+++ b/css/blog.css
@@ -266,5 +266,25 @@ body{
     color: #B22222;
 }
     
+.scroll-up {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; 
+    background-color: #B22222;
+    color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 1000;
+    transition: opacity 0.3s ease;
+    text-align: center;
+  }
+  
+  .scroll-up:hover {
+    background-color: #4B3D29;
+    color: #fff;
+  }
 
 
