--- a/css/blogpage3.css
+++ b/css/blogpage3.css
@@ -116,7 +116,8 @@ body {
     height: 350px;                        
     width: 100%;                         
     object-fit: cover;               
-    transition: transform 0.3s ease;      
+    transition: transform 0.3s ease;
+    cursor: pointer;      
 }
 
 .post-content .main-img:hover {
@@ -451,3 +452,24 @@ body {
     font-size: 1.5rem;
   }
   
+
+  .scroll-up {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; 
+    background-color: #B22222;
+    color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 1000;
+    transition: opacity 0.3s ease;
+    text-align: center;
+  }
+  
+  .scroll-up:hover {
+    background-color: #4B3D29;
+    color: #fff;
+  }
