--- a/css/blogpost2.css
+++ b/css/blogpost2.css
@@ -457,3 +457,24 @@ body {
     font-weight: 600;
     font-size: 1.5rem;
 }
+
+.scroll-up {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; 
+    background-color: #B22222;
+    color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 1000;
+    transition: opacity 0.3s ease;
+    text-align: center;
+  }
+  
+  .scroll-up:hover {
+    background-color: #4B3D29;
+    color: #fff;
+  }
