--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #921e1e;
+    background-color: #f4f4f4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,66 +8,30 @@ body {
     margin: 0;
 }
 
-.login-form {
+.signup-wrapper {
     width: 100%;
     max-width: 400px;
     padding: 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    
 }
 
 h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #B22222;
     font-weight: 700;
-    font-size: 1.9rem;
 }
-
-.text-center {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.tagline p {
-    color: #4B3D29;
-    font-size: 1.1rem;
-    margin: 5px 0;
-}
-
-.tagline p strong {
-    font-size: 1.2rem;
-    color: #B22222;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-}
-
-.tagline {
-    border-top: 1px solid #ddd;
-    padding-top: 15px;
-    margin-top: 20px;
-}
-
-
 
 .form-group {
     position: relative;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 .form-group i {
     position: absolute;
     top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-    color: #B22222;
-    font-size: 20px;
-}
-
-.form-group .email {
-    position: absolute;
-    top: 70%;
     left: 15px;
     transform: translateY(-50%);
     color: #B22222;
@@ -94,13 +58,6 @@ input:focus {
     margin-bottom: 20px;
 }
 
-
-.form-group label{
-    font-family: sans-serif;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-
 .form-button button {
     width: 50%;
     padding: 12px;
@@ -121,7 +78,6 @@ input:focus {
     color: #B22222;
     text-decoration: none;
     font-size: 1rem;
-    ;left: 100%;
     transition: color 0.3s ease;
 }
 
@@ -129,11 +85,30 @@ input:focus {
     color: #4B3D29;
 }
 
-.form-button {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+.text-center {
+    text-align: center;
+    margin-top: 20px; 
 }
+
+.tagline p {
+    color: #4B3D29; 
+    font-size: 1.1rem; 
+    margin: 5px 0; 
+}
+
+.tagline p strong {
+    font-size: 1.3rem;
+    color: #B22222; 
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+}
+
+.tagline {
+    border-top: 1px solid #ddd;
+    padding-top: 15px; 
+    margin-top: 20px; 
+}
+
+
 
 .eye-icon {
     position: absolute;
